# PrismaAssistant

./: .env.example  .gitignore  Dockerfile  README.md  articulos_filtrados.csv  cleanup.py  config.py  docker-compose.yml  main.py  metrics_log.csv  pyproject.toml  requirements.txt  reset_milvus.py  test_cohere.py  test_milvus.py
app/: main.py
app/config/: settings.py
app/core/: adaptive_retrieval.py  database.py  report_generator.py  search_engine.py  two_phase_searcher.py
app/domain/: eligibility_contract.py  prompt_generator.py  query_expander.py  translator.py
app/extraction/: bm25_retriever.py  pdf_extractor.py  pdf_text_worker.py
app/llm/: ai_model.py  cross_encoder_reranker.py  embedding_service.py  rag_analyzer.py  screening_ai.py  synthesis.py  synthesis_config.py
app/screening/: deduplication.py  deep_screener.py  (+7 more)
config/: .env.example  Dockerfile  docker-compose.yml
modules/: database.py  deduplication.py  filters.py  grok_filter.py  pdf_extractor.py  prisma_criteria.py  rag_pipeline.py  report_generator.py  screening.py  screening_ai.py  search_engine.py  synthesis.py
requirements/: base.txt  dev.txt  test.txt
templates/: filters.html  index.html  results.html  review.html  screening.html
training/: dataset.py  fix_notebook_gen.py  generate_notebook.py  patch_dataset.py
utils/: audit_report_pdf.py  bm25_retriever.py  check_models.py  csv_ingest.py  eligibility_contract.py  emergency_fix.py  eval_screening.py  export.py  fix_corrupted_file.py  pdf_extractor.py  pdf_text_worker.py  prompt_generator.py  query_expander.py  translator.py
(+119 files in other folders)
