[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-assistant"
version = "2.0.0"
description = "PRISMA-compliant systematic literature review assistant with RAG and LLM-as-a-Judge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # Managed via requirements/base.txt

[tool.setuptools]
packages = ["app"]
package-dir = { "" = "." }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py310"]
